Fix typo errors

--- a/StoreAndDeliverUI/src/assets/i18n/en.json
+++ b/StoreAndDeliverUI/src/assets/i18n/en.json
@@ -141,7 +141,7 @@
         "storeManagement": "Store management"
     },
     "changePassword": {
-        "changePassword": "Cahnge password",
+        "changePassword": "Change password",
         "passwordChanging": "Password changing",
         "newPassword": "New password",
         "confirmPassword": "Confirm password",
