--- a/StoreAndDeliverUI/src/assets/i18n/ua.json
+++ b/StoreAndDeliverUI/src/assets/i18n/ua.json
@@ -153,7 +153,7 @@
         "signin": "Увійти",
         "login": "Вхід",
         "logout": "Вийти",
-        "signup": "Регістрація",
+        "signup": "Реєстрація",
         "userName": "Ім'я користувача",
         "email": "Електронна пошта",
         "password": "Пароль",
